# R2G-Empirical-Evaluation

./: .gitignore  README.md  pyproject.toml
data/real_rdb/: example_network.csv
src/r2g_eval/: __init__.py  algorithms.py  cli.py  data.py  data_generators.py  experiment.py  experiments.py  main.py  models.py  mpnn_trainer.py  problems.py  tester.py
